update cprnc filenames for coupled and uncoupled tests

--- a/components/scream/tests/coupled/physics_only/atm_proc_subcycling/CMakeLists.txt
+++ b/components/scream/tests/coupled/physics_only/atm_proc_subcycling/CMakeLists.txt
@@ -36,8 +36,8 @@ CreateUnitTestFromExec (shoc_p3_monolithic shoc_p3
 include (BuildCprnc)
 BuildCprnc()
 
-set (SRC_FILE "shoc_p3_monolithic.INSTANT.Steps_x3.nc")
-set (TGT_FILE "shoc_p3_subcycled.INSTANT.Steps_x1.nc")
+set (SRC_FILE "shoc_p3_monolithic.INSTANT.nsteps_x3.nc")
+set (TGT_FILE "shoc_p3_subcycled.INSTANT.nsteps_x1.nc")
 set (TEST_NAME check_subcycling)
 add_test (NAME ${TEST_NAME}
           COMMAND cmake -P ${CMAKE_BINARY_DIR}/bin/CprncTest.cmake ${SRC_FILE} ${TGT_FILE}
