Fix CIME based EAMxx output control
This commit also changes the name of nsteps_since_last_write to
nsamples_since_last_write.  This will pave the way for a subsequent
PR that should make it possible to change the sampling rate for
averaging flags that are not "Instant".

--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -60,4 +60,7 @@ output_control:
   Timestamp in Filename: true
   avg_type_in_filename: false
   frequency_in_filename: false
+Checkpoint Control:
+  Frequency: ${REST_N}
+  frequency_units: ${REST_OPTION}
 ...
