fix output yaml

--- a/components/scream/tests/coupled/surface_coupling_only/input.yaml
+++ b/components/scream/tests/coupled/surface_coupling_only/input.yaml
@@ -37,5 +37,5 @@ Initial Conditions:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: ["output.yaml"]
+  Output YAML Files: ["surface_coupling_output.yaml"]
 ...
