EAMxx: some changes to where/how the tpl targets are created
* Handle all of them once, before parsing any scream src folder
* Handle them inside a "tpls" subdir, to hide any potential
  src/obj/lib file created in the process

--- a/components/scream/CMakeLists.txt
+++ b/components/scream/CMakeLists.txt
@@ -20,7 +20,6 @@ endif()
 set (EKAT_CMAKE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../externals/ekat/cmake)
 list(APPEND CMAKE_MODULE_PATH
      ${CMAKE_CURRENT_SOURCE_DIR}/cmake
-     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/tpls
      ${EKAT_CMAKE_PATH}
      ${EKAT_CMAKE_PATH}/pkg_build
 )
@@ -451,6 +450,7 @@ add_custom_target(baseline_cxx)
 # scripts work correctly. We are not really interested in building/testing SCREAM.
 if (NOT DEFINED ENV{SCREAM_FAKE_ONLY})
 
+  add_subdirectory(tpls)
   add_subdirectory(src)
 
   if (NOT SCREAM_LIB_ONLY)
