--- a/components/scream/src/share/io/CMakeLists.txt
+++ b/components/scream/src/share/io/CMakeLists.txt
@@ -14,6 +14,10 @@ set_target_properties(scream_io PROPERTIES Fortran_MODULE_DIRECTORY ${SCREAM_F90
 target_link_libraries(scream_io PUBLIC scream_share diagnostics piof)
 target_compile_options(scream_io PUBLIC $<$<COMPILE_LANGUAGE:Fortran>:${SCREAM_Fortran_FLAGS}>)
 
+if (SCREAM_CIME_BUILD)
+  target_link_libraries(scream_io PUBLIC csm_share)
+endif()
+
 if (NOT SCREAM_LIB_ONLY)
   add_subdirectory(tests)
 endif()
