Added and tested SWCF, LWCF, RH, and Rime water path

--- a/components/scream/src/diagnostics/tests/CMakeLists.txt
+++ b/components/scream/src/diagnostics/tests/CMakeLists.txt
@@ -2,7 +2,7 @@
 if (NOT SCREAM_BASELINES_ONLY)
   include(ScreamUtils)
 
-  set( NEED_LIBS scream_share diagnostics )
+  set( NEED_LIBS scream_share diagnostics physics_share)
 
   # Test potential temperature diagnostic
   CreateUnitTest(potential_temperature "potential_temperature_test.cpp" "${NEED_LIBS}" LABELS "diagnostics" )
@@ -26,5 +26,10 @@ if (NOT SCREAM_BASELINES_ONLY)
   CreateUnitTest(water_path "water_path_tests.cpp" "${NEED_LIBS}" LABELS "diagnostics" )
   # Test shortwave cloud forcing
   CreateUnitTest(shortwave_cloud_forcing "shortwave_cloud_forcing_tests.cpp" "${NEED_LIBS}" LABELS "diagnostics" )
+  # Test longwave cloud forcing
+  CreateUnitTest(longwave_cloud_forcing "longwave_cloud_forcing_tests.cpp" "${NEED_LIBS}" LABELS "diagnostics" )
+  # Test Relative Humidity 
+  CreateUnitTest(relative_humidity "relative_humidity_tests.cpp" "${NEED_LIBS}" LABELS "diagnostics" )
+
 
 endif()
