--- a/components/homme/test_execs/preqx_kokkos_ut/CMakeLists.txt
+++ b/components/homme/test_execs/preqx_kokkos_ut/CMakeLists.txt
@@ -18,11 +18,25 @@ SET (QSIZE_D 4)
 SET (PIO_INTERP TRUE)
 HommeConfigFile (${THIS_CONFIG_IN} ${THIS_CONFIG_HC} ${THIS_CONFIG_H} )
 
-ADD_LIBRARY(preqx_kokkos_ut_lib ${PREQX_DEPS})
+ADD_LIBRARY(preqx_kokkos_ut_lib
+  ${PREQX_DEPS}
+  ${TEST_SRC_F90}
+  ${SRC_DIR}/checksum_mod.F90
+  ${SRC_DIR}/common_io_mod.F90
+  ${SRC_DIR}/common_movie_mod.F90
+  ${SRC_DIR}/interpolate_driver_mod.F90
+  ${SRC_DIR}/interp_movie_mod.F90
+  ${SRC_DIR}/netcdf_io_mod.F90
+  ${SRC_DIR}/pio_io_mod.F90
+  ${SRC_DIR}/prim_movie_mod.F90
+  ${SRC_DIR}/restart_io_mod.F90
+  ${SRC_DIR}/surfaces_mod.F90
+  ${SRC_DIR}/test_mod.F90
+)
 TARGET_INCLUDE_DIRECTORIES(preqx_kokkos_ut_lib PUBLIC ${EXEC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(preqx_kokkos_ut_lib PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 TARGET_COMPILE_DEFINITIONS(preqx_kokkos_ut_lib PUBLIC "HAVE_CONFIG_H")
-TARGET_LINK_LIBRARIES(preqx_kokkos_ut_lib kokkos)
+TARGET_LINK_LIBRARIES(preqx_kokkos_ut_lib kokkos csm_share)
 TARGET_LINK_LIBRARIES(preqx_kokkos_ut_lib timing ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 IF (HOMME_USE_MKL)
   TARGET_LINK_LIBRARIES (preqx_kokkos_ut_lib -mkl)
