EAMxx: make radiation process columns in chunks
Allows to reduce memory footprint in RRTMGP.
The size of column chunks is configurable via yaml/xml file.

--- a/components/scream/tests/uncoupled/rrtmgp/input.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input.yaml
@@ -14,6 +14,7 @@ atmosphere_processes:
   atm_procs_list: (rrtmgp)
   rrtmgp:
     Grid: Point Grid
+    Max Column Chunk Size: 123
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
     Orbital Year: 1990
     Can Initialize All Inputs: true
