--- a/components/scream/tests/uncoupled/rrtmgp/input.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input.yaml
@@ -3,6 +3,7 @@
 # This input file is for a free-standing rrtmgp test that runs using initial conditions read from a SCREAMv0 run
 Debug:
   Atmosphere DAG Verbosity Level: 5
+  Atm Log Level: debug
 
 Time Stepping:
   Time Step: ${ATM_TIME_STEP}
@@ -14,7 +15,7 @@ atmosphere_processes:
   atm_procs_list: (rrtmgp)
   rrtmgp:
     Grid: Point Grid
-    Max Column Chunk Size: 123
+    Column Chunk Size: ${COL_CHUNK_SIZE}
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
     Orbital Year: 1990
     Can Initialize All Inputs: true
@@ -39,5 +40,5 @@ Initial Conditions:
 
 # The parameters for I/O control
 Scorpio:
-  Output YAML Files: ["rrtmgp_standalone_output.yaml"]
+  Output YAML Files: ["rrtmgp_standalone_output${SUFFIX}.yaml"]
 ...
