EAMxx: removed UserProvidedGridsManager
The class was mostly pointless. Replaced with MeshFreeGridsManager
where it was used.

--- a/components/scream/src/control/tests/ad_tests.yaml
+++ b/components/scream/src/control/tests/ad_tests.yaml
@@ -27,6 +27,7 @@ atmosphere_processes:
     Grid Name: Point Grid
 
 Grids Manager:
-  Type: User Provided
-  Reference Grid: Point Grid
+  Type: Mesh Free
+  Number of Global Columns: 24
+  Number of Vertical Levels: 3
 ...
