EAMxx: renamed/moved DynamicsDrivenGridsManager to HommeGridsManager
Much more self explanatory (and shorter to type)

--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -49,7 +49,7 @@ atmosphere_processes:
       active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
 
 Grids Manager:
-  Type: Dynamics Driven
+  Type: Homme
   Reference Grid: Physics GLL
   Dynamics Namelist File Name: namelist.nl
 
