--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -53,7 +53,7 @@ atmosphere_processes:
       do_aerosol_rad: false
 
 Grids Manager:
-  Type: Dynamics Driven
+  Type: Homme
   Reference Grid: Physics GLL
   Dynamics Namelist File Name: namelist.nl
 
