EAMxx: fix some issues related to HommeGridsManager

--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -50,7 +50,7 @@ atmosphere_processes:
 
 Grids Manager:
   Type: Homme
-  Reference Grid: Physics GLL
+  Physics Grid Type: GLL
   Dynamics Namelist File Name: namelist.nl
 
 # The parameters for I/O control
