--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -54,7 +54,7 @@ atmosphere_processes:
 
 Grids Manager:
   Type: Homme
-  Reference Grid: Physics GLL
+  Physics Grid Type: GLL
   Dynamics Namelist File Name: namelist.nl
 
 # List all the yaml files with the output parameters
