--- a/components/scream/tests/uncoupled/homme/input.yaml
+++ b/components/scream/tests/uncoupled/homme/input.yaml
@@ -21,7 +21,7 @@ atmosphere_processes:
 
 Grids Manager:
   Type: Homme
-  Reference Grid: Physics GLL
+  Physics Grid Type: GLL
   Dynamics Namelist File Name: namelist.nl
 
 # The parameters for I/O control
