EAMxx: moved some impl of GridsManager to a cpp file

--- a/components/scream/src/share/CMakeLists.txt
+++ b/components/scream/src/share/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SHARE_SRC
   field/field_group.cpp
   field/field_manager.cpp
   grid/abstract_grid.cpp
+  grid/grids_manager.cpp
   grid/mesh_free_grids_manager.cpp
   grid/se_grid.cpp
   grid/point_grid.cpp
