Move surface coupling standalone test, fix it to worth with this change.
This commit updates the new surface coupling standalone test to work with
the use of the frequency unit = "nsteps" instead of the old approach which
used "Steps".

This commit also moves the surface coupling testing directory to the "uncoupled"
sub-directory under tests, since it tests just one process.

--- a/components/scream/tests/uncoupled/surface_coupling_only/surface_coupling_output.yaml
+++ b/components/scream/tests/uncoupled/surface_coupling_only/surface_coupling_output.yaml
@@ -18,7 +18,7 @@ Field Names:
   - precip_ice_surf_mass
 output_control:
   Frequency: 1
-  frequency_units: Steps
+  frequency_units: nsteps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
 ...
