--- a/components/scream/src/control/tests/ad_tests.yaml
+++ b/components/scream/src/control/tests/ad_tests.yaml
@@ -26,7 +26,7 @@ atmosphere_processes:
     Sub Name: Group to A
     Grid Name: Point Grid
 
-Grids Manager:
+grids_manager:
   Type: User Provided
   Reference Grid: Point Grid
 ...
