--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -48,7 +48,7 @@ atmosphere_processes:
       Column Chunk Size: 123
       active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
 
-Grids Manager:
+grids_manager:
   Type: Dynamics Driven
   Reference Grid: Physics GLL
   Dynamics Namelist File Name: namelist.nl
