--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_restarted.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_restarted.yaml
@@ -12,7 +12,7 @@ Time Stepping:
   Case Start Time: [12, 00, 00]      # Hours, Minutes, Seconds
   Case Start Date: [2021, 10, 12]    # Year, Month, Day
 
-Initial Conditions:
+initial_conditions:
   Restart Casename: model_restart
 
 atmosphere_processes:
