--- a/components/scream/src/control/tests/ad_tests.yaml
+++ b/components/scream/src/control/tests/ad_tests.yaml
@@ -3,7 +3,7 @@
 Debug:
   Atmosphere DAG Verbosity Level: 5
 
-Initial Conditions:
+initial_conditions:
   Filename: should_not_be_neeeded_and_code_will_throw_if_it_tries_to_open_this_nonexistent_file.nc
   A: 1.0
   V: [2.0, 3.0]
