Number of Subcycles -> number_of_subcycles

--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -35,7 +35,7 @@ atmosphere_processes:
       atm_procs_list: (shoc,CldFraction,p3)
       Schedule Type: Sequential
       Type: Group
-      Number of Subcycles: ${MAC_MIC_SUBCYCLES}
+      number_of_subcycles: ${MAC_MIC_SUBCYCLES}
       shoc:
         Grid: Physics GLL
       CldFraction:
