--- a/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/input.yaml
@@ -16,7 +16,7 @@ atmosphere_processes:
     atm_procs_list: (shoc,CldFraction,spa,p3)
     Type: Group
     Schedule Type: Sequential
-    Number of Subcycles: ${MAC_MIC_SUBCYCLES}
+    number_of_subcycles: ${MAC_MIC_SUBCYCLES}
     shoc:
       Grid: Point Grid
     CldFraction:
