Enable Precondition Checks -> enable_precondition_checks

--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -21,7 +21,7 @@ atmosphere_processes:
   Schedule Type: Sequential
   homme:
     Process Name: Homme
-    Enable Precondition Checks: false
+    enable_precondition_checks: false
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_128lev}
     Moisture: moist
   physics:
