--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -24,7 +24,7 @@ atmosphere_processes:
   atm_procs_list: (homme,physics)
   Schedule Type: Sequential
   homme:
-    Enable Precondition Checks: false
+    enable_precondition_checks: false
     Vertical Coordinate Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_72lev}
     Moisture: moist
   physics:
