--- a/components/scream/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
@@ -25,7 +25,7 @@ initial_conditions:
 
 atmosphere_processes:
   atm_procs_list: (homme,physics)
-  Schedule Type: Sequential
+  schedule_type: Sequential
   homme:
     Process Name: Homme
     enable_precondition_checks: false
@@ -34,11 +34,11 @@ atmosphere_processes:
   physics:
     atm_procs_list: (mac_aero_mic,rrtmgp)
     Type: Group
-    Schedule Type: Sequential
+    schedule_type: Sequential
     mac_aero_mic:
       atm_procs_list: (shoc,CldFraction,p3)
       Type: Group
-      Schedule Type: Sequential
+      schedule_type: Sequential
       number_of_subcycles: ${MAC_MIC_SUBCYCLES}
       shoc:
         Grid: Physics GLL
