--- a/components/scream/src/control/tests/ad_tests.yaml
+++ b/components/scream/src/control/tests/ad_tests.yaml
@@ -11,7 +11,7 @@ initial_conditions:
 
 atmosphere_processes:
   atm_procs_list: (dummy1, dummy2, dummy3)
-  Schedule Type: Sequential
+  schedule_type: Sequential
 
   dummy1:
     Type: Dummy
