--- a/components/scream/src/share/tests/atm_process_tests_parse_list.yaml
+++ b/components/scream/src/share/tests/atm_process_tests_parse_list.yaml
@@ -1,14 +1,14 @@
 %YAML 1.1
 ---
 atm_procs_list: (MyFoo,(MyBar,MyBaz))
-Schedule Type: Sequential
+schedule_type: Sequential
 Type: Group
 
 MyFoo:
   Type: Foo
   Grid Name: Point Grid
 group.MyBar_MyBaz.:
-  Schedule Type: Sequential
+  schedule_type: Sequential
   atm_procs_list: (MyBar,MyBaz)
 
   MyBar:
