--- a/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
@@ -11,7 +11,7 @@ atmosphere_processes:
     active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
     orbital_year: 1990
     # Set orbital parameters to constants for consistency with RRTMGP test problem
-    Orbital Eccentricity: 0
+    orbital_eccentricity: 0
     Orbital Obliquity: 0
     Orbital MVELP: 0
     Fixed Solar Zenith Angle: 0.86
