one last fix to control yaml file

--- a/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
@@ -11,6 +11,7 @@ Field Names:
   - nccn
 output_control:
   Frequency: ${NUM_STEPS}
+  frequency_units: nsteps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
 ...
