EAMxx: always run the fpe unit test
But, of course, determine pass/fail depending on whether SCREAM_FPE
is ON or OFF.

--- a/components/scream/tests/generic/fail_check/CMakeLists.txt
+++ b/components/scream/tests/generic/fail_check/CMakeLists.txt
@@ -1,27 +1,26 @@
-include(EkatCreateUnitTest)
+include(ScreamUtils)
 
 # Tests to ensure that fails/errors are indeed caught
 # NOTE: we don't need any libs for this test, but scream's CreateUnitTest
 # has libs as a required arg. So use the raw EkatCreateUnitTest
 
 # Ensure that a non-satisfied REQUIRE clause does, in fact, make the test fail
-EkatCreateUnitTestExec (fail "fail.cpp")
-EkatCreateUnitTestFromExec (fail fail PROPERTIES WILL_FAIL TRUE LABELS "fail")
+EkatCreateUnitTestFromExec (fail "fail.cpp" PROPERTIES WILL_FAIL TRUE LABELS "fail")
 
 if (Kokkos_ENABLE_DEBUG_BOUNDS_CHECK)
   # Ensure that Kokkos OOB are caught
-  EkatCreateUnitTestExec (kokkos_fail "kokkos_fail.cpp")
-  EkatCreateUnitTestFromExec (kokkos_fail kokkos_fail PROPERTIES WILL_FAIL TRUE LABELS "fail")
+  EkatCreateUnitTest (kokkos_fail "kokkos_fail.cpp" PROPERTIES WILL_FAIL TRUE LABELS "fail")
 endif()
 
 if (EKAT_ENABLE_VALGRIND)
   # Ensure that valgrind errors are caught
-  EkatCreateUnitTestExec (valg_fail "valg_fail.cpp")
-  EkatCreateUnitTestFromExec (valg_fail valg_fail PROPERTIES WILL_FAIL TRUE LABELS "fail")
+  EkatCreateUnitTest (valg_fail "valg_fail.cpp" PROPERTIES WILL_FAIL TRUE LABELS "fail")
 endif()
 
+# Ensure that FPE *do* throw when we expect them to
+CreateUnitTestExec (fpe_check "fpe_check.cpp" "scream_share")
 if (SCREAM_FPE)
-  # Ensure that FPE *do* throw
-  EkatCreateUnitTestExec (fpe_fail "fpe_fail.cpp")
-  EkatCreateUnitTestFromExec (fpe_fail fpe_fail PROPERTIES WILL_FAIL TRUE LABELS "fail")
+  CreateUnitTestFromExec (fpe_check fpe_check PROPERTIES WILL_FAIL TRUE LABELS "check")
+else()
+  CreateUnitTestFromExec (fpe_check fpe_check LABELS "check")
 endif()
