Some more fixes for GPU simulations.
Missed a deep_copy in both the horizontal_remap test and in the SPA
interface.

This commit also adjusts the SPA standalone test to compare 4 snapshots
of output data in a single file.  The purpose is that SPA stand alone
runs at a timestep that should cause it to remap in multiple months, so
we don't want to just check that the last month remapped appropriately, we
want to check multiple months of remapping.

Also, supressed an annoying print statement that would print for all nodes to
just print on the master rank.

--- a/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
@@ -2,7 +2,7 @@
 ---
 Casename: spa_standalone_output
 Averaging Type: Instant
-Max Snapshots Per File: 1
+Max Snapshots Per File: ${NUM_STEPS}
 Field Names:
   - aero_g_sw
   - aero_ssa_sw
@@ -10,7 +10,7 @@ Field Names:
   - aero_tau_sw
   - nccn
 output_control:
-  Frequency: ${NUM_STEPS}
+  Frequency: 1
   frequency_units: nsteps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
