--- a/components/scream/src/share/io/tests/io_test_template.yaml
+++ b/components/scream/src/share/io/tests/io_test_template.yaml
@@ -9,7 +9,7 @@ Field Names:
   - field_3
   - field_packed
   - field_3@bot
-  - field_3@top
+  - field_3@tom
   - field_3@lev_2
   - DummyDiagnostic
 output_control:
