Change CPP var to SCREAM_SMALL_KERNELS
Attempt to add a small kernel test that will always run

--- a/components/scream/CMakeLists.txt
+++ b/components/scream/CMakeLists.txt
@@ -180,9 +180,9 @@ if (DEFINED ENV{SCREAM_MACHINE})
   set(DEFAULT_SCREAM_MACHINE $ENV{SCREAM_MACHINE})
 endif()
 
-set(DEFAULT_MONOLITHIC_KERNELS TRUE)
+set(DEFAULT_SMALL_KERNELS FALSE)
 if (Kokkos_ENABLE_HIP)
-  set(DEFAULT_MONOLITHIC_KERNELS FALSE)
+  set(DEFAULT_SMALL_KERNELS TRUE)
 endif()
 
 ### Set CACHE vars
@@ -197,8 +197,8 @@ set(SCREAM_LIB_ONLY ${DEFAULT_LIB_ONLY} CACHE BOOL "Only build libraries, no exe
 set(NetCDF_Fortran_PATH ${DEFAULT_NetCDF_Fortran_PATH} CACHE FILEPATH "Path to netcdf fortran installation")
 set(NetCDF_C_PATH ${DEFAULT_NetCDF_C_PATH} CACHE FILEPATH "Path to netcdf C installation")
 set(SCREAM_MACHINE ${DEFAULT_SCREAM_MACHINE} CACHE STRING "The CIME/SCREAM name for the current machine")
-set(SCREAM_MONOLITHIC_KERNELS ${DEFAULT_MONOLITHIC_KERNELS} CACHE STRING "Use monolithic kokkos kernels")
-if (NOT SCREAM_MONOLITHIC_KERNELS)
+set(SCREAM_SMALL_KERNELS ${DEFAULT_SMALL_KERNELS} CACHE STRING "Use small, non-monolothic kokkos kernels")
+if (NOT SCREAM_SMALL_KERNELS)
   set(EKAT_DISABLE_WORKSPACE_SHARING TRUE CACHE STRING "")
 endif()
 
