EAMxx: add SCREAM_MPI_ON_DEVICE cmake config option

--- a/components/scream/CMakeLists.txt
+++ b/components/scream/CMakeLists.txt
@@ -192,6 +192,7 @@ set(SCREAM_LIB_ONLY ${DEFAULT_LIB_ONLY} CACHE BOOL "Only build libraries, no exe
 set(NetCDF_Fortran_PATH ${DEFAULT_NetCDF_Fortran_PATH} CACHE FILEPATH "Path to netcdf fortran installation")
 set(NetCDF_C_PATH ${DEFAULT_NetCDF_C_PATH} CACHE FILEPATH "Path to netcdf C installation")
 set(SCREAM_MACHINE ${DEFAULT_SCREAM_MACHINE} CACHE STRING "The CIME/SCREAM name for the current machine")
+option(SCREAM_MPI_ON_DEVICE "Whether to use device pointers for MPI calls" ON)
 
 # Handle input root
 if (SCREAM_MACHINE)
