--- a/components/scream/src/scream_config.h.in
+++ b/components/scream/src/scream_config.h.in
@@ -40,6 +40,7 @@
 #define SCREAM_HAS_MEMORY_USAGE
 #endif
 
+#cmakedefine01 SCREAM_MPI_ON_DEVICE
 
 // Data directory for the scream project
 #define SCREAM_DATA_DIR "${SCREAM_DATA_DIR}"
