--- a/components/scream/src/physics/shoc/CMakeLists.txt
+++ b/components/scream/src/physics/shoc/CMakeLists.txt
@@ -80,7 +80,6 @@ set(SHOC_SK_SRCS
     shoc_update_host_dse_disp.cpp
     )
 
-
 if (NOT SCREAM_DEBUG)
   # Mods to compiler flags for individual files to resolve internal compiler errors.
   if ("${SCREAM_MACHINE}" STREQUAL "cori-knl")
@@ -91,17 +90,25 @@ if (NOT SCREAM_DEBUG)
   endif()
 endif()
 
-add_library(shoc ${SHOC_SRCS})
-add_library(shoc_sk ${SHOC_SRCS} ${SHOC_SK_SRCS})
-foreach (SHOCLIB shoc;shoc_sk)
-  target_include_directories(${SHOCLIB} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../share)
-  set_target_properties(${SHOCLIB} PROPERTIES Fortran_MODULE_DIRECTORY ${SCREAM_F90_MODULES})
-  target_link_libraries(${SHOCLIB} physics_share scream_share)
-  target_compile_options(${SHOCLIB} PUBLIC $<$<COMPILE_LANGUAGE:Fortran>:${SCREAM_Fortran_FLAGS}>)
-endforeach()
+set(SHOC_LIBS "shoc")
+if (SCREAM_SMALL_KERNELS)
+  add_library(shoc ${SHOC_SRCS} ${SHOC_SK_SRCS})
+else()
+  add_library(shoc ${SHOC_SRCS})
+  if (NOT SCREAM_BASELINES_ONLY)
+    add_library(shoc_sk ${SHOC_SRCS} ${SHOC_SK_SRCS})
+    # Always build shoc_sk with SCREAM_SMALL_KERNELS on
+    target_compile_definitions(shoc_sk PUBLIC "SCREAM_SMALL_KERNELS")
+    list(APPEND SHOC_LIBS "shoc_sk")
+  endif()
+endif()
 
-# Always build shoc_sk with SCREAM_SMALL_KERNELS on
-target_compile_definitions(shoc_sk PUBLIC "SCREAM_SMALL_KERNELS")
+foreach (SHOC_LIB IN LISTS SHOC_LIBS)
+  target_include_directories(${SHOC_LIB} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../share)
+  set_target_properties(${SHOC_LIB} PROPERTIES Fortran_MODULE_DIRECTORY ${SCREAM_F90_MODULES})
+  target_link_libraries(${SHOC_LIB} physics_share scream_share)
+  target_compile_options(${SHOC_LIB} PUBLIC $<$<COMPILE_LANGUAGE:Fortran>:${SCREAM_Fortran_FLAGS}>)
+endforeach()
 
 if (NOT SCREAM_LIB_ONLY)
   add_subdirectory(tests)
