--- a/components/scream/src/share/io/CMakeLists.txt
+++ b/components/scream/src/share/io/CMakeLists.txt
@@ -10,7 +10,10 @@ set(SCREAM_SCORPIO_SRCS
 
 # Create io lib
 add_library(scream_io ${SCREAM_SCORPIO_SRCS})
-set_target_properties(scream_io PROPERTIES Fortran_MODULE_DIRECTORY ${SCREAM_F90_MODULES})
+set_target_properties(scream_io PROPERTIES
+  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules
+)
+target_include_directories(scream_io PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/modules)
 target_link_libraries(scream_io PUBLIC scream_share diagnostics piof pioc)
 
 if (SCREAM_CIME_BUILD)
