cleaning; also, fixing summit build

--- a/components/scream/CMakeLists.txt
+++ b/components/scream/CMakeLists.txt
@@ -413,13 +413,15 @@ include(EkatMpiUtils)
 # (for openpmi; -lmpicxx for mpich) flag.
 DisableMpiCxxBindings()
 
+message("CMAKE_CXX_COMPILER_ID is ${CMAKE_CXX_COMPILER_ID}")
 if (SCREAM_DOUBLE_PRECISION)
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
     set(SCREAM_Fortran_FLAGS -real-size 64)
-  else()
-	  #find what is crayclang id in cmake
+  elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "[Cc]lang" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "HIPCC")
+    #find what is crayclang id in cmake
     set(SCREAM_Fortran_FLAGS -s default32 -eZ)
-	  #set(SCREAM_Fortran_FLAGS -fdefault-real-8 -fdefault-double-8)
+  else()
+    set(SCREAM_Fortran_FLAGS -fdefault-real-8 -fdefault-double-8)
   endif()
 endif()
 
