--- a/components/scream/src/physics/shoc/CMakeLists.txt
+++ b/components/scream/src/physics/shoc/CMakeLists.txt
@@ -90,6 +90,11 @@ if (NOT SCREAM_DEBUG)
   endif()
 endif()
 
+if (HIP_BUILD)
+  #this is needed for crusher even with small kernels
+  set_source_files_properties(shoc_diag_second_shoc_moments_disp.cpp  PROPERTIES COMPILE_FLAGS -O1)
+endif()
+
 set(SHOC_LIBS "shoc")
 if (SCREAM_SMALL_KERNELS)
   add_library(shoc ${SHOC_SRCS} ${SHOC_SK_SRCS})
