Make err tol "driver_options" param
- Rename "Debug" to "driver_options" in params
- Move err tol values to "driver_options"
- Split err tol into energy and mass versions
- add fail handling type to "driver_options" params

--- a/components/scream/tests/uncoupled/rrtmgp/input.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input.yaml
@@ -1,7 +1,7 @@
 %YAML 1.1
 ---
 # This input file is for a free-standing rrtmgp test that runs using initial conditions read from a SCREAMv0 run
-Debug:
+driver_options:
   atmosphere_dag_verbosity_level: 5
   atm_log_level: debug
 
