--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -1,7 +1,10 @@
 %YAML 1.1
 ---
-Debug:
+driver_options:
   atmosphere_dag_verbosity_level: 5
+  mass_column_conservation_error_tolerance: 1e-3
+  energy_column_conservation_error_tolerance: 1e-4
+  column_conservation_checks_fail_handling_type: Warning
 
 Time Stepping:
   Time Step: ${ATM_TIME_STEP}
@@ -38,10 +41,8 @@ atmosphere_processes:
       p3:
         do_prescribed_ccn: false
         enable_column_conservation_checks: true
-        column_conservation_check_tolerance: 1e-4
       shoc:
         enable_column_conservation_checks: true
-        column_conservation_check_tolerance: 1e-3
     rrtmgp:
       column_chunk_size: 123
       active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
@@ -51,7 +52,6 @@ atmosphere_processes:
       rrtmgp_cloud_optics_file_sw: ${SCREAM_DATA_DIR}/init/rrtmgp-cloud-optics-coeffs-sw.nc
       rrtmgp_cloud_optics_file_lw: ${SCREAM_DATA_DIR}/init/rrtmgp-cloud-optics-coeffs-lw.nc
       enable_column_conservation_checks: true
-      column_conservation_check_tolerance: 1e-14
 
 grids_manager:
   Type: Homme
