Cleanup code in response to reviewer comments.

--- a/components/scream/src/diagnostics/CMakeLists.txt
+++ b/components/scream/src/diagnostics/CMakeLists.txt
@@ -26,7 +26,7 @@ set(DIAGNOSTIC_SRCS
 
 add_library(diagnostics ${DIAGNOSTIC_SRCS})
 target_include_directories(diagnostics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../share)
-target_link_libraries(diagnostics PUBLIC scream_share physics_share)
+target_link_libraries(diagnostics PUBLIC scream_share)
 
 if (NOT SCREAM_LIB_ONLY)
   add_subdirectory(tests)
