set phis from separate topo file

--- a/components/eamxx/tests/coupled/dynamics_physics/model_restart/CMakeLists.txt
+++ b/components/eamxx/tests/coupled/dynamics_physics/model_restart/CMakeLists.txt
@@ -118,3 +118,4 @@ configure_file(${SCREAM_SRC_DIR}/dynamics/homme/tests/theta.nl
 
 # Ensure test input files are present in the data dir
 GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
+GetInputFile(../cam/topo/USGS-gtopo30_ne4np4_16x.c20160612.nc)
