--- a/components/eamxx/tests/coupled/physics_only/atm_proc_subcycling/CMakeLists.txt
+++ b/components/eamxx/tests/coupled/physics_only/atm_proc_subcycling/CMakeLists.txt
@@ -5,6 +5,7 @@ CreateUnitTestExec (shoc_p3 shoc_p3.cpp "shoc;p3;scream_control;diagnostics")
 
 # Ensure test input files are present in the data dir
 GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
+GetInputFile(../cam/topo/USGS-gtopo30_ne4np4_16x.c20160612.nc)
 
 # Run a test with subcycling
 set (NUM_SUBCYCLES 3)
