--- a/components/eamxx/tests/uncoupled/homme/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/homme/CMakeLists.txt
@@ -9,7 +9,7 @@ set (TEST_LABELS "dynamics;driver")
 set (NEED_LIBS ${dynLibName} scream_control scream_share diagnostics)
 
 CreateUnitTest(homme_standalone "homme_standalone.cpp" "${NEED_LIBS}"
-  LABELS ${TEST_LABELS} 
+  LABELS ${TEST_LABELS}
   MPI_RANKS ${TEST_RANK_START} ${TEST_RANK_END}
   PROPERTIES FIXTURES_SETUP homme_generate_output_nc_files
 )
@@ -58,6 +58,7 @@ configure_file(${SCREAM_BASE_DIR}/src/dynamics/homme/tests/theta.nl
 
 # Ensure test input files are present in the data dir
 GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
+GetInputFile(../cam/topo/USGS-gtopo30_ne4np4_16x.c20160612.nc)
 
 ## Finally compare all MPI rank output files against the single rank output as a baseline, using CPRNC
 ## Only if running with 2+ ranks configurations
@@ -70,7 +71,7 @@ if (TEST_RANK_END GREATER TEST_RANK_START)
     set (SRC_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x${NUM_STEPS}.np${MPI_RANKS}.nc")
     set (TGT_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x${NUM_STEPS}.np${TEST_RANK_START}.nc")
     set (TEST_NAME "${BASE_TEST_NAME}_np${TEST_RANK_START}_vs_np${MPI_RANKS}_bfb")
-    add_test (NAME ${TEST_NAME} 
+    add_test (NAME ${TEST_NAME}
               COMMAND cmake -P ${CMAKE_BINARY_DIR}/bin/CprncTest.cmake ${SRC_FILE} ${TGT_FILE}
               WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
     set_tests_properties(${TEST_NAME} PROPERTIES LABELS "${TEST_LABELS}"
