--- a/components/eamxx/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/CMakeLists.txt
+++ b/components/eamxx/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/CMakeLists.txt
@@ -17,8 +17,7 @@ set (SHOC_MAX_DT 300)
 math (EXPR MAC_MIC_SUBCYCLES "(${ATM_TIME_STEP} + ${SHOC_MAX_DT} - 1) / ${SHOC_MAX_DT}")
 
 # Ensure test input files are present in the data dir
-GetInputFile(scream/init/${EAMxx_tests_IC_FILE_72lev})
-GetInputFile(cam/topo/USGS-gtopo30_ne4np4_16x.c20160612.nc)
+GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
 
 ## Copy (and configure) yaml files needed by tests
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.yaml
