--- a/components/eamxx/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/CMakeLists.txt
+++ b/components/eamxx/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/CMakeLists.txt
@@ -18,11 +18,10 @@ math (EXPR MAC_MIC_SUBCYCLES "(${ATM_TIME_STEP} + ${SHOC_MAX_DT} - 1) / ${SHOC_M
 
 # Ensure test input files are present in the data dir
 set (TEST_INPUT_FILES
-  scream/init/${EAMxx_tests_IC_FILE_72lev}
-  scream/init/spa_init_ne2np4.nc
-  scream/init/map_ne4np4_to_ne2np4_mono.nc
-  scream/init/spa_file_unified_and_complete_ne4_20220428.nc
-  cam/topo/USGS-gtopo30_ne4np4_16x.c20160612.nc
+  init/${EAMxx_tests_IC_FILE_72lev}
+  init/spa_init_ne2np4.nc
+  init/map_ne4np4_to_ne2np4_mono.nc
+  init/spa_file_unified_and_complete_ne4_20220428.nc
 )
 foreach (file IN ITEMS ${TEST_INPUT_FILES})
   GetInputFile(${file})
